--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/node-sass": "^4.11.3",
     "axios": "^0.27.2",
     "bootstrap": "^5.1.3",
+    "classnames": "^2.3.1",
     "jwt-decode": "^3.1.2",
     "mobx": "^6.6.0",
     "mobx-react-lite": "^3.4.0",
